fix overflow items in leaderborad.

--- a/src/styles/_donation.scss
+++ b/src/styles/_donation.scss
@@ -68,7 +68,7 @@ div.leader-board {
     }
 
     th.td-person {
-      width: 25em;
+      width: 20em;
     }
 
     th.td-donations-amount{
@@ -85,6 +85,9 @@ div.leader-board {
       }
 
       td {
+        overflow: hidden;
+        text-overflow: ellipsis;
+
         &.td-donation-status {
           color: #1391ea;
           font-size: 1.2em;
